force-app/main/default/objects/Notification_Template__mdt/Notification_Template__mdt.object-meta.xml
<CustomObject>
    <label>Notification Template</label>
    <pluralLabel>Notification Templates</pluralLabel>
    <description>Templates for notification messages across different channels and event types.</description>
</CustomObject>