force-app/main/default/objects/Notification_Template__mdt/fields/Body_Template__c.field-meta.xml
<CustomField>
    <fullName>Body_Template__c</fullName>
    <label>Body Template</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <description>Template for the notification body with merge field placeholders.</description>
</CustomField>