force-app/main/default/objects/Notification_Template__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Text</type>
    <length>50</length>
    <description>Notification delivery channel (e.g., Email, Slack, Chatter, Bell).</description>
</CustomField>