force-app/main/default/objects/Notification_Template__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Text</type>
    <length>100</length>
    <description>Type of event that triggers this notification template.</description>
</CustomField>