force-app/main/default/objects/Notification_Template__mdt/fields/Subject_Template__c.field-meta.xml
<CustomField>
    <fullName>Subject_Template__c</fullName>
    <label>Subject Template</label>
    <type>Text</type>
    <length>255</length>
    <description>Template for the notification subject line with merge field placeholders.</description>
</CustomField>